--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@ b\:* {behavior:url(#default#VML);}
 .shape {behavior:url(#default#VML);}
 </style>
 <![endif]-->
-<title>ฺไๆวไ วแีÝอษ</title>
+<title>รรครฆรรค รรกร•รรร</title>
 <style>
 <!--
  /* Font Definitions */
@@ -22,7 +22,7 @@ b\:* {behavior:url(#default#VML);}
 	{font-family:Arial;
 	panose-1:2 11 6 4 2 2 2 2 2 4;}
 @font-face
-	{font-family:Tahoma;
+	{font-family:Arial;
 	panose-1:2 11 6 4 3 5 4 4 2 4;}
  /* Style Definitions */
 p.MsoNormal, li.MsoNormal, div.MsoNormal
@@ -144,7 +144,7 @@ left:127px;top:55px;width:318px;height:38px'>
   <h3 style='direction:rtl;unicode-bidi:embed;text-align:center'><span
   lang=ar-SA style='font-size:26.0pt;font-family:Arial;color:#FFC000;
   font-weight:bold;language:ar-SA;direction:rtl;unicode-bidi:normal;font-size:
-  26.0pt;font-weight:bold'>วแวอสศวำ  วแอัวัํ</span></h3>
+  26.0pt;font-weight:bold'>รรกรรรรรร“ย  รรกรร‘รร‘รญ</span></h3>
   </div>
   <![if !vml]></td>
  </tr>
@@ -178,7 +178,7 @@ left:155px;top:219px;width:248px;height:38px'>
   <h3 style='direction:rtl;unicode-bidi:embed;text-align:center'><span
   lang=ar-SA style='font-size:20.0pt;font-family:Arial;color:#77085A;
   font-weight:bold;language:ar-SA;direction:rtl;unicode-bidi:normal;font-size:
-  20.0pt;font-weight:bold'>วแวอสศวำ วแอัวัํ</span></h3>
+  20.0pt;font-weight:bold'>รรกรรรรรร“ รรกรร‘รร‘รญ</span></h3>
   </div>
   <![if !vml]></td>
  </tr>
@@ -220,7 +220,7 @@ src="index.files/image449.png" v:shapes="_x0000_s1028"></span><![endif]><!--[if 
   <div dir=rtl>
   <p class=MsoNormal style='text-align:center;text-align:center'><span
   lang=ar-SA style='font-family:Tahoma;color:white;font-weight:bold;language:
-  ar-SA;direction:rtl;unicode-bidi:normal;font-size:11.6592pt;font-weight:bold'>วแัฦํำํษ</span></p>
+  ar-SA;direction:rtl;unicode-bidi:normal;font-size:11.6592pt;font-weight:bold'>รรกร‘รรญร“รญร</span></p>
   </div>
  </v:textbox>
 </v:roundrect><![endif]--><![if !vml]><span style='position:absolute;
@@ -229,7 +229,7 @@ name=MicrosoftOfficeMap0><area shape=Polygon
 coords="7, 1, 3, 3, 1, 8, 1, 32, 3, 37, 7, 38, 97, 38, 101, 37, 103, 32, 103, 8, 101, 3, 97, 1, 7, 1"
 href="index.htm"></map><img border=0 width=104 height=41
 src="index.files/image619.png" usemap="#MicrosoftOfficeMap0"
-alt="ใำสุํแ ใำสฯํั วแาๆวํว: วแัฦํำํษ&#13;" v:shapes="_x0000_s1029"></span><![endif]><!--[if gte vml 1]><v:roundrect
+alt="รฃร“รรรญรก รฃร“รรรญร‘ รรกร’รฆรรญร: รรกร‘รรญร“รญร&#13;" v:shapes="_x0000_s1029"></span><![endif]><!--[if gte vml 1]><v:roundrect
  id="_x0000_s1030" href="index.files/Page438.htm" style='position:absolute;
  left:251.44pt;top:110.25pt;width:76.08pt;height:27.75pt;z-index:6;
  mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
@@ -251,7 +251,7 @@ alt="ใำสุํแ ใำสฯํั วแาๆวํว: วแัฦํำํษ&#13;" v:shapes="_x0000_s1029"></span><![end
   <p class=MsoNormal style='text-align:center;text-align:center'><span
   lang=ar-SA style='font-size:12.0pt;line-height:119%;font-family:Tahoma;
   color:white;font-weight:bold;language:ar-SA;direction:rtl;unicode-bidi:normal;
-  font-size:12.0pt;font-weight:bold'>วแวอสศวำ</span></p>
+  font-size:12.0pt;font-weight:bold'>รรกรรรรรร“</span></p>
   </div>
  </v:textbox>
 </v:roundrect><![endif]--><![if !vml]><span style='position:absolute;
@@ -260,7 +260,7 @@ name=MicrosoftOfficeMap1><area shape=Polygon
 coords="7, 1, 3, 3, 1, 8, 1, 32, 3, 37, 7, 38, 97, 38, 101, 37, 103, 32, 103, 8, 101, 3, 97, 1, 7, 1"
 href="index.files/Page438.htm"></map><img border=0 width=104 height=41
 src="index.files/image618.png" usemap="#MicrosoftOfficeMap1"
-alt="ใำสุํแ ใำสฯํั วแาๆวํว: วแวอสศวำ&#13;" v:shapes="_x0000_s1030"></span><![endif]><!--[if gte vml 1]><v:roundrect
+alt="รฃร“รรรญรก รฃร“รรรญร‘ รรกร’รฆรรญร: รรกรรรรรร“&#13;" v:shapes="_x0000_s1030"></span><![endif]><!--[if gte vml 1]><v:roundrect
  id="_x0000_s1031" href="index.files/Page430.htm" style='position:absolute;
  left:171.94pt;top:110.25pt;width:76.08pt;height:27.75pt;z-index:7;
  mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
@@ -282,7 +282,7 @@ alt="ใำสุํแ ใำสฯํั วแาๆวํว: วแวอสศวำ&#13;" v:shapes="_x0000_s1030"></span><![end
   <p class=MsoNormal style='text-align:center;text-align:center'><span
   lang=ar-SA style='font-size:12.0pt;line-height:119%;font-family:Tahoma;
   color:white;font-weight:bold;language:ar-SA;direction:rtl;unicode-bidi:normal;
-  font-size:12.0pt;font-weight:bold'>วแวำศวศ</span></p>
+  font-size:12.0pt;font-weight:bold'>รรกรร“รรร</span></p>
   </div>
  </v:textbox>
 </v:roundrect><![endif]--><![if !vml]><span style='position:absolute;
@@ -291,7 +291,7 @@ name=MicrosoftOfficeMap2><area shape=Polygon
 coords="7, 1, 3, 3, 1, 8, 1, 32, 3, 37, 7, 38, 97, 38, 101, 37, 103, 32, 103, 8, 101, 3, 97, 1, 7, 1"
 href="index.files/Page430.htm"></map><img border=0 width=104 height=41
 src="index.files/image617.png" usemap="#MicrosoftOfficeMap2"
-alt="ใำสุํแ ใำสฯํั วแาๆวํว: วแวำศวศ&#13;" v:shapes="_x0000_s1031"></span><![endif]><!--[if gte vml 1]><v:roundrect
+alt="รฃร“รรรญรก รฃร“รรรญร‘ รรกร’รฆรรญร: รรกรร“รรร&#13;" v:shapes="_x0000_s1031"></span><![endif]><!--[if gte vml 1]><v:roundrect
  id="_x0000_s1032" href="index.files/Page310.htm" style='position:absolute;
  left:92.44pt;top:110.25pt;width:76.08pt;height:27.75pt;z-index:8;
  mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
@@ -313,7 +313,7 @@ alt="ใำสุํแ ใำสฯํั วแาๆวํว: วแวำศวศ&#13;" v:shapes="_x0000_s1031"></span><![endi
   <p class=MsoNormal style='text-align:center;text-align:center'><span
   lang=ar-SA style='font-size:12.0pt;line-height:119%;font-family:Tahoma;
   color:white;font-weight:bold;language:ar-SA;direction:rtl;unicode-bidi:normal;
-  font-size:12.0pt;font-weight:bold'>วแวึัวั</span></p>
+  font-size:12.0pt;font-weight:bold'>รรกรร–ร‘รร‘</span></p>
   </div>
  </v:textbox>
 </v:roundrect><![endif]--><![if !vml]><span style='position:absolute;
@@ -322,7 +322,7 @@ name=MicrosoftOfficeMap3><area shape=Polygon
 coords="7, 1, 3, 3, 1, 8, 1, 32, 3, 37, 7, 38, 97, 38, 101, 37, 103, 32, 103, 8, 101, 3, 97, 1, 7, 1"
 href="index.files/Page310.htm"></map><img border=0 width=104 height=41
 src="index.files/image616.png" usemap="#MicrosoftOfficeMap3"
-alt="ใำสุํแ ใำสฯํั วแาๆวํว: วแวึัวั&#13;" v:shapes="_x0000_s1032"></span><![endif]><!--[if gte vml 1]><v:roundrect
+alt="รฃร“รรรญรก รฃร“รรรญร‘ รรกร’รฆรรญร: รรกรร–ร‘รร‘&#13;" v:shapes="_x0000_s1032"></span><![endif]><!--[if gte vml 1]><v:roundrect
  id="_x0000_s1033" href="index.files/Page314.htm" style='position:absolute;
  left:12.19pt;top:110.25pt;width:76.08pt;height:27.75pt;z-index:9;
  mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
@@ -344,7 +344,7 @@ alt="ใำสุํแ ใำสฯํั วแาๆวํว: วแวึัวั&#13;" v:shapes="_x0000_s1032"></span><![endi
   <p class=MsoNormal style='text-align:center;text-align:center'><span
   lang=ar-SA style='font-size:12.0pt;line-height:119%;font-family:Tahoma;
   color:white;font-weight:bold;language:ar-SA;direction:rtl;unicode-bidi:normal;
-  font-size:12.0pt;font-weight:bold'>วแอแๆแ</span></p>
+  font-size:12.0pt;font-weight:bold'>รรกรรกรฆรก</span></p>
   </div>
  </v:textbox>
 </v:roundrect><![endif]--><![if !vml]><span style='position:absolute;
@@ -353,7 +353,7 @@ name=MicrosoftOfficeMap4><area shape=Polygon
 coords="7, 1, 3, 3, 1, 8, 1, 32, 3, 37, 7, 38, 97, 38, 101, 37, 103, 32, 103, 8, 101, 3, 97, 1, 7, 1"
 href="index.files/Page314.htm"></map><img border=0 width=104 height=41
 src="index.files/image548.png" usemap="#MicrosoftOfficeMap4"
-alt="ใำสุํแ ใำสฯํั วแาๆวํว: วแอแๆแ&#13;" v:shapes="_x0000_s1033"></span><![endif]><!--[if gte vml 1]><v:shape
+alt="รฃร“รรรญรก รฃร“รรรญร‘ รรกร’รฆรรญร: รรกรรกรฆรก&#13;" v:shapes="_x0000_s1033"></span><![endif]><!--[if gte vml 1]><v:shape
  id="_x0000_s1034" type="#_x0000_t202" style='position:absolute;left:8.64pt;
  top:221.35pt;width:401.25pt;height:584.67pt;flip:x;z-index:10;visibility:visible;
  mso-wrap-edited:f;mso-wrap-distance-left:2.88pt;mso-wrap-distance-top:2.88pt;
@@ -382,68 +382,68 @@ left:12px;top:295px;width:535px;height:780px'>
   direction:rtl;unicode-bidi:embed;text-align:justify;text-justify:inter-word'><span
   lang=ar-SA style='font-size:14.0pt;font-family:Arial;font-weight:bold;
   language:ar-SA;direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:
-  bold'>ศฯวํษ วแวอสศวำ วแอัวัํ ใไะ ูๅๆั วแลไำวไ ฺแ์ ฿ๆ฿ศ วแรัึ Þศแ</span></p>
+  bold'>รรรรญร รรกรรรรรร“ รรกรร‘รร‘รญ รฃรคร รรฅรฆร‘ รรกร…รคร“รรค รรกรฌ รรฆรร รรกรร‘ร– รรรก</span></p>
   <p class=MsoBodyText3 style='text-align:justify;text-justify:inter-word;
   text-kashida-space:50%;direction:rtl;unicode-bidi:embed;text-align:justify;
   text-justify:inter-word;text-kashida-space:50%'><span lang=ar-SA
   style='font-size:14.0pt;font-family:Arial;font-weight:bold;language:ar-SA;
-  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>ใแํๆไํ ฺวใ ๆอส์ วแÞัไ วแฮวใำ ฺิั แใ ํสÛํั วแ฿หํั ฺแ์ ใไวฮ</span></p>
+  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>รฃรกรญรฆรครญ รรรฃ รฆรรรฌ รรกรร‘รค รรกรรรฃร“ รร”ร‘ รกรฃ รญรรรญร‘ รรกรรรญร‘ รรกรฌ รฃรครร</span></p>
   <p class=MsoBodyText3 style='text-align:justify;text-justify:inter-word;
   text-kashida-space:50%;direction:rtl;unicode-bidi:embed;text-align:justify;
   text-justify:inter-word;text-kashida-space:50%'><span lang=ar-SA
   style='font-size:14.0pt;font-family:Arial;font-weight:bold;language:ar-SA;
-  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>วแรัึ วแะํ อวÝู ฺแ์ ฯัฬวส อัวัสๅ ศำศศ ฺฯใ สรหํั วแลไำวไ</span></p>
+  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>รรกรร‘ร– รรกรรญ รรรร รรกรฌ รร‘รรร รร‘รร‘รรฅ รร“รร รรรฃ รรรรญร‘ รรกร…รคร“รรค</span></p>
   <p class=MsoBodyText3 style='text-align:justify;text-justify:inter-word;
   text-kashida-space:50%;direction:rtl;unicode-bidi:embed;text-align:justify;
   text-justify:inter-word;text-kashida-space:50%'><span lang=ar-SA
   style='font-size:14.0pt;font-family:Arial;font-weight:bold;language:ar-SA;
-  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>วแ฿ศํั ฮแวแ สแ฿ วแใัอแษ ก ๆแ฿ไ ใฺ สุๆั ฺÞแ วแลไำวไ ๆศฯวํษ</span></p>
+  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>รรกรรรญร‘ รรกรรก รรกร รรกรฃร‘รรกร ยก รฆรกรรค รฃร รรรฆร‘ รรรก รรกร…รคร“รรค รฆรรรรญร</span></p>
   <p class=MsoBodyText3 style='text-align:justify;text-justify:inter-word;
   text-kashida-space:50%;direction:rtl;unicode-bidi:embed;text-align:justify;
   text-justify:inter-word;text-kashida-space:50%'><span lang=ar-SA
   style='font-size:14.0pt;font-family:Arial;font-weight:bold;language:ar-SA;
-  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>ฺีั วแวฮสัวฺวส ใไะ วแÞัไ วแฮวใำ ฺิั ๆอส์ วแยไก ๆูๅๆั</span></p>
+  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>รร•ร‘ รรกรรรร‘รรรร รฃรคร รรกรร‘รค รรกรรรฃร“ รร”ร‘ รฆรรรฌ รรกรรคยก รฆรรฅรฆร‘</span></p>
   <p class=MsoBodyText3 style='text-align:justify;text-justify:inter-word;
   text-kashida-space:50%;direction:rtl;unicode-bidi:embed;text-align:justify;
   text-justify:inter-word;text-kashida-space:50%'><span lang=ar-SA
   style='font-size:14.0pt;font-family:Arial;font-weight:bold;language:ar-SA;
-  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>วแหๆัษ วแีไวฺํษ Ýํ รๆัๆศวก ศฯร ใไวฮ วแฺวแใ ศวแสÛํั สฯัํฬํษ แํูๅั</span></p>
+  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>รรกรรฆร‘ร รรกร•รครรรญร รรญ รรฆร‘รฆรรยก รรร รฃรครร รรกรรรกรฃ รรรกรรรญร‘ รรร‘รญรรญร รกรญรรฅร‘</span></p>
   <p class=MsoBodyText3 style='text-align:justify;text-justify:inter-word;
   text-kashida-space:50%;direction:rtl;unicode-bidi:embed;text-align:justify;
   text-justify:inter-word;text-kashida-space:50%'><span lang=ar-SA
   style='font-size:14.0pt;font-family:Arial;color:red;font-weight:bold;
   language:ar-SA;direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:
-  bold'>ใว ํฺัÝ ศวแวอสศวำ วแอัวัํ</span></p>
+  bold'>รฃร รญรร‘ร รรรกรรรรรร“ รรกรร‘รร‘รญ</span></p>
   <p class=MsoBodyText3 style='text-align:justify;text-justify:inter-word;
   text-kashida-space:50%;direction:rtl;unicode-bidi:embed;text-align:justify;
   text-justify:inter-word;text-kashida-space:50%'><span lang=ar-SA
   style='font-size:14.0pt;font-family:Arial;font-weight:bold;language:ar-SA;
-  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>รีศอส วแใิ฿แวส สสัว฿ใ ÝๆÞ ๅะว วแ฿ๆ฿ศ แฯัฬษ รไๅว สๅฯฯ ำแวใษ วแอํวษ</span></p>
+  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>รร•รรร รรกรฃร”รรกรร รรร‘รรรฃ รรฆร รฅรร รรกรรฆรร รกรร‘รร รรครฅร รรฅรร ร“รกรรฃร รรกรรญรร</span></p>
   <p class=MsoBodyText3 style='text-align:justify;text-justify:inter-word;
   text-kashida-space:50%;direction:rtl;unicode-bidi:embed;text-align:justify;
   text-justify:inter-word;text-kashida-space:50%'><span lang=ar-SA
   style='font-size:14.0pt;font-family:Arial;font-weight:bold;language:ar-SA;
-  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>ฺแ์ ฿ๆ฿ศ วแรัึก ๆแใ ํสใ อส์ วแํๆใ สุศํÞ วแอแๆแ วแแวาใษ แลไÞวะ</span></p>
+  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>รรกรฌ รรฆรร รรกรร‘ร–ยก รฆรกรฃ รญรรฃ รรรฌ รรกรญรฆรฃ รรรรญร รรกรรกรฆรก รรกรกรร’รฃร รกร…รครรร</span></p>
   <p class=MsoBodyText3 style='text-align:justify;text-justify:inter-word;
   text-kashida-space:50%;direction:rtl;unicode-bidi:embed;text-align:justify;
   text-justify:inter-word;text-kashida-space:50%'><span lang=ar-SA
   style='font-size:14.0pt;font-family:Arial;font-weight:bold;language:ar-SA;
-  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>วแ฿ๆ฿ศ ใไ วแใวั. ๆสัสศุ ใิว฿แ ๅะว วแ฿ๆ฿ศ ศิ฿แ รำวำํ ศวแสุๆั</span></p>
+  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>รรกรรฆรร รฃรค รรกรฃรร‘. รฆรร‘รรร รฃร”รรรก รฅรร รรกรรฆรร รร”รรก รร“รร“รญ รรรกรรรฆร‘</span></p>
   <p class=MsoBodyText3 style='text-align:justify;text-justify:inter-word;
   text-kashida-space:50%;direction:rtl;unicode-bidi:embed;text-align:justify;
   text-justify:inter-word;text-kashida-space:50%'><span lang=ar-SA
   style='font-size:14.0pt;font-family:Arial;font-weight:bold;language:ar-SA;
-  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>วแส฿ไๆแๆฬํ ๆวแีไวฺํ ๆวแำํวำํ ๆÛํั ะแ฿ก Ýวแรัึ แใ สฺฯ สอสใแ</span></p>
+  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>รรกรรรครฆรกรฆรรญ รฆรรกร•รครรรญ รฆรรกร“รญรร“รญ รฆรรญร‘ รรกรยก รรรกรร‘ร– รกรฃ รรร รรรรฃรก</span></p>
   <p class=MsoBodyText3 style='text-align:justify;text-justify:inter-word;
   text-kashida-space:50%;direction:rtl;unicode-bidi:embed;text-align:justify;
   text-justify:inter-word;text-kashida-space:50%'><span lang=ar-SA
   style='font-size:14.0pt;font-family:Arial;font-weight:bold;language:ar-SA;
-  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>วแใาํฯ ใไ วแสแๆห รๆ ใว ํึั ศๅวบ ÝÞฯ รีศอส ใแๆหษ ศิ฿แ ฿ศํั ฬฯวก ๆÞฯ</span></p>
+  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>รรกรฃร’รญร รฃรค รรกรรกรฆร รรฆ รฃร รญร–ร‘ รรฅรยบ รรร รร•รรร รฃรกรฆรร รร”รรก รรรญร‘ รรรยก รฆรร</span></p>
   <p class=MsoBodyText3 style='text-align:justify;text-justify:inter-word;
   text-kashida-space:50%;direction:rtl;unicode-bidi:embed;text-align:justify;
   text-justify:inter-word;text-kashida-space:50%'><span lang=ar-SA
   style='font-size:14.0pt;font-family:Arial;font-weight:bold;language:ar-SA;
-  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>ํรสํ วแๆÞส วแะํ แว สÛฯ วแรัึ ใ฿วไว ํใ฿ไ วแฺํิ ฺแํๅ</span></p>
+  direction:rtl;unicode-bidi:normal;font-size:14.0pt;font-weight:bold'>รญรรรญ รรกรฆรร รรกรรญ รกร รรร รรกรร‘ร– รฃรรรคร รญรฃรรค รรกรรญร” รรกรญรฅ</span></p>
   <p class=MsoNormal><span lang=ar-SA style='font-size:14.0pt;line-height:119%;
   font-family:Arial;font-weight:bold;language:ar-SA;direction:rtl;unicode-bidi:
   normal;font-size:14.0pt;font-weight:bold'>&nbsp;</span></p>
@@ -518,17 +518,17 @@ src="index.files/image328.png" v:shapes="_x0000_s1077"></span><![endif]><!--[if 
   <div dir=rtl>
   <p class=MsoNormal style='text-align:center;text-align:center'><span
   lang=ar-SA style='font-size:8.0pt;line-height:119%;font-family:Tahoma;
-  language:ar-SA;direction:rtl;unicode-bidi:normal;font-size:8.0pt'>ฬใํฺ วแอÞๆÞ ใอÝๆูษ </span><span
+  language:ar-SA;direction:rtl;unicode-bidi:normal;font-size:8.0pt'>รรฃรญร รรกรรรฆร รฃรรรฆรร </span><span
   dir=ltr lang=en-US style='font-size:6.0pt;line-height:119%;font-family:Tahoma;
-  language:en-US;direction:ltr;unicode-bidi:embed'>ฉ</span><span lang=ar-SA
+  language:en-US;direction:ltr;unicode-bidi:embed'>ยฉ</span><span lang=ar-SA
   style='font-size:8.0pt;line-height:119%;font-family:Tahoma;language:ar-SA;
-  direction:rtl;unicode-bidi:normal;font-size:8.0pt'> (Ûแว ศไ ไใิวไ , ใํฺวฯ วแฺๆวฯ , ิๅฯ วแฺใัํ , ัÛฯ วศๆำศฺๅ )</span></p>
+  direction:rtl;unicode-bidi:normal;font-size:8.0pt'> (รรกร รรค รครฃร”รรค , รฃรญรรร รรกรรฆรร , ร”รฅร รรกรรฃร‘รญ , ร‘รร รรรฆร“รรรฅ )</span></p>
   </div>
  </v:textbox>
 </v:shape><![endif]--><![if !vml]><span style='position:absolute;z-index:54;
 left:18px;top:1174px;width:533px;height:27px'><img width=533 height=27
 src="index.files/image615.png"
-alt="ใัศฺ ไี: ฬใํฺ วแอÞๆÞ ใอÝๆูษ ฉ (Ûแว ศไ ไใิวไ , ใํฺวฯ วแฺๆวฯ , ิๅฯ วแฺใัํ , ัÛฯ วศๆำศฺๅ )&#13;"
+alt="รฃร‘รร รคร•: รรฃรญร รรกรรรฆร รฃรรรฆรร ยฉ (รรกร รรค รครฃร”รรค , รฃรญรรร รรกรรฆรร , ร”รฅร รรกรรฃร‘รญ , ร‘รร รรรฆร“รรรฅ )&#13;"
 v:shapes="_x0000_s1078"></span><![endif]>
 </div>
 
